--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
 </head>
 <body>
     <div class="container">
-    <div class="side-left">
-        <div class="player-number">1</div>
-        <div class="player-points">0</div>
-        <div class="player-button">Rzut kostką</div>
-    </div>
     <div class="center">
-        <div class="center-top">
-            <div class="player-number-2">2</div>
-            <div class="player-points-2">0</div>
-            <div class="player-button-2">Rzut kostką</div>
-        </div>
         <div class="center-middle">
             <div class="card">1</div>
             <div class="card">2</div>
@@ -32,16 +22,14 @@
             <div class="card">8</div>
             <div class="card">9</div>
         </div>
-        <div class="center-bottom">
-            <div class="player-number-2">4</div>
-            <div class="player-points-2">0</div>
-            <div class="player-button-2">Rzut kostką</div>
+        <div class="player-window">
+            <div class="dice-button"></div>
+            <div class="skip-button"></div>
         </div>
-    </div>
-    <div class="side-right">
-        <div class="player-number">3</div>
-        <div class="player-points">0</div>
-        <div class="player-button">Rzut kostką</div>
+        <div class="player-list">
+            <div class="player-tab">sbsb</div>
+            <div class="player-tab">fbng</div>
+        </div>
     </div>
     </div>
 </body>
