trello 6 starting page

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
             <div class="player-list js-players-tabs-container">
             </div>
         </div>
-        <div class="start-dialog">
-            
+        <div class="start-dialog js-start-dialog">
+            <div class="start-label">Ustaw<br>liczbę<br>graczy</div>
+            <button class="start-button js-add">+</button>
+            <div class="start-number js-start-players-number">2</div>
+            <button class="start-button js-substract">-</button>
+            <button class="start-button play js-start-play">Zagraj</button>
         </div>
     </div>
 </body>
