--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <div class="center-middle js-board-container">
             </div>
             <div class="player-window">
-                <div class="dice-button js-dice"></div>
+                <div class="dice-button js-stack"></div>
+                <div class="dice-button js-dice">rzuć kostką</div>
                 <div class="skip-button js-end-round"></div>
             </div>
             <div class="player-list js-players-tabs-container">
