--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gra planszowa Wylot</title>
     <link href="main.css" type="text/css"  rel="stylesheet" />
-    <script src="/main.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
