--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gra planszowa Wylot</title>
-    <link href="main.css" type="text/css"  rel="stylesheet" />
+    <link href="main.css" type="text/css" rel="stylesheet" />
     <script src="main.js" type="text/javascript"></script>
 </head>
+
 <body>
     <div class="container">
-        <div class="center">
-            <div class="center-middle js-board-container">
-            </div>
-            <div class="player-window">
-                <div class="dice-button js-stack"></div>
-                <div class="dice-button js-dice">rzuć kostką</div>
-                <div class="skip-button js-end-round"></div>
-            </div>
-            <div class="player-list js-players-tabs-container">
-            </div>
+        <div class="cards-board js-board-container">
+        </div>
+        <div class="action-board">
+            <div class="action-board--item stack js-stack"></div>
+            <div class="action-board--item dice-button js-dice">rzuć kostką</div>
+            <div class="action-board--item js-end-round"></div>
+        </div>
+        <div class="player-list js-players-tabs-container">
         </div>
         <div class="start-dialog js-start-dialog">
             <div class="start-label">Ustaw<br>liczbę<br>graczy</div>
@@ -29,4 +29,5 @@
         </div>
     </div>
 </body>
+
 </html>
