--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gra planszowa Wylot</title>
-    <link href="main.css" type="text/css" rel="stylesheet" />
-    <script src="main.js" type="text/javascript"></script>
+    <link href="src/css/main.css" type="text/css" rel="stylesheet" />
+    <script src="bundle.js" type="text/javascript"></script>
 </head>
 
 <body>
