--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="action-board">
             <div class="action-board--item stack js-stack"></div>
             <div class="action-board--item dice-button js-dice">rzuć kostką</div>
-            <div class="action-board--item js-end-round"></div>
+            <div class="action-board--item js-end-round">zakończ rundę</div>
         </div>
         <div class="player-list js-players-tabs-container">
         </div>
